Uploaded image for project: 'Log4cxx'
  1. Log4cxx
  2. LOGCXX-320

TLS memory of APR is not freed in destructor of APRInitializer

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Minor
    • Resolution: Fixed
    • 0.10.0, 0.11.0
    • None
    • None
    • None
    • Windows (all versions)

    Description

      ISSUE:
      If the preprocessor define APR_HAS_THREADS is set then the contructor of APRInitializer calls APR function "apr_threadkey_private_create()".
      The APR function allocates TLS memory.
      This memory is never freed.
      Microsoft Application Verifier is able to detect this issue.

      PROPOSAL:
      The destructor of APRInitializer should call APR function "apr_threadkey_private_delete()" if APR_HAS_THREADS was set.

      Attachments

        Activity

          People

            ulerich Rhys Ulerich
            cthien Christoph Thien
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: