LOGCXX-320: TLS memory of APR is not freed in destructor of APRInitializer